--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/256/5043/5043967.png" type="image/x-icon">
 </head>
 <body>
-  <header>
-
+  <header class="my-9 text-center space-y-4">
+    <h1 class="text-3xl">AI Universe Hub</h1>
+    <button class="btn bg-red-500 text-white">Sort By Date</button>
   </header>
-  <main>
-
+  <main id="main" class="max-w-screen-xl  gap-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto">
+    
   </main>
-  <footer>
+  <footer >
+    <!-- You can open the modal using ID.showModal() method -->
+<div id="modal">
+  
+</div>
 
   </footer>
   <script src="./index.js"></script>
+  <script src="https://kit.fontawesome.com/860ec9f204.js" crossorigin="anonymous"></script>
 </body>
 </html>
