show more added

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1 class="text-3xl">AI Universe Hub</h1>
     <button class="btn bg-red-500 text-white">Sort By Date</button>
   </header>
-  <main id="main" class="max-w-screen-xl  gap-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto">
-    
+  <main id="main" class="max-w-screen-xl  gap-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-auto items-center">
+    <span class="loading loading-ring loading-lg w-1/5 mx-auto col-span-3 h-fit"></span>
   </main>
   <footer >
     <!-- You can open the modal using ID.showModal() method -->
